
    R package: macroutils

CHANGES IN VERSION 1.10.0
    
    2015/10/09  Implemented more strict tests / benchmarks 
        between macroReadBin() and bin-file conversion 
        performed by MACRO 5.2. Should be able to detect 
        unwanted accidental changes in macroReadBin() 
        (at least in terms of numerical accuracy)
    
CHANGES IN VERSION 1.9.0
    
    2015/10/08  Added the function macroInFocusGWConc() 
        to calculate pesticide concentrations from MACROInFOCUS 
        output bin file(s). Internal and experimental.
    
CHANGE SIN VERSION 1.8.4
    
    2015/09/23  Added an 'overwrite' agument to 
        macroConvertBin(), and fixed a bug that caused an 
        interactive question to be asked to the user even 
        when 'gui' was FALSE and the output files already 
        existed. Now if 'overwrite' is FALSE and 'gui' is 
        TRUE a question is asked to the user, and otherwise 
        if 'gui' is FALSE and 'overwrite' is FALSE, an 
        error is issued when files already exists.
    
        A sub-section was added in the vignette that describes 
        how to perform a batch conversion of files with 
        macroConvertBin(), including listing all the bin 
        files in a folder.
    
CHANGES IN VERSION 1.8.3

    2015/07/23  Added the function isValidTimeSeries(), used
        internally to check that time series read from or 
        written to BIN-files are consistent (increasing, 
        homogeneous increment and no duplicated values).
    
CHANGES IN VERSION 1.8.2
    
    2015/04/17  Compiled for R 3.2.0 RC (2015-04-15 r68178).
    
        Cleaned-up internal call to library() or require() 
        and use :: instead (+ Depends or Suggests or Import 
        fields in package DESCRIPTION)
    
    2015/05/04  Compiled for R 3.2.0 Official release.
    
CHANGES IN VERSION 1.8.1
    
    2015/03/17  Moved from a local SVN to a public git (GitHub) 