@@ -1,1 +1,1 @@
-cb99c06 Fixed a new bug in the vignette (new subfolder)
+cbbf44f version / updates
