@@ -8,7 +8,10 @@ CHANGES IN VERSION 1.10.0
         performed by MACRO 5.2. Should be able to detect 
         unwanted accidental changes in macroReadBin() 
         (at least in terms of numerical accuracy)
-    
+        
+        Also included a simple benchmark in macroInFocusGWConc()
+        on concentration and percolation
+        
 CHANGES IN VERSION 1.9.0
     
     2015/10/08  Added the function macroInFocusGWConc() 
